Buff: Make steadfst give a buff
Bug: Path split is wrong
Bug: Item stored over item doesn't work
Balance: Buff final boss monsters some
Feature: Highscores
Feature: Statistics
Bug: HP regen for champion didn't include 1.66 hp bonus

JUST FINISHED
-------------
Fix: Nerf freeze (make it less complicated)
Buff: Fiery veil buffed
Balance: Gave wraith dolleyes and ice golem ice scream

COOKING
-------
Feature: Redo pixel sizing on all monster sprites that are 192 x 192, and cllean up icons
Feature: achievements

Bug: No save tutorial prompt
Bug: Outline is broken on candle swapping
Fix: Make dialogue prompt rotate
Fix: Make it so stuff can be hovered over during rewards panel
Fix: Add tutorial tip for not being able to assign skill point in combat
Fix: Deal with items having 2 always rounded down to 1
Buff: Make timekeeper's heal a full heal and revive

NEAR FUTURE
----------------
Feature: Add another particle effect maker for the ending area (flame particles rising up)
Speed Runner Tester: Jeffrey Zhao
Feature: Add achievements
Feature: Sound effects and music
Feature: Ending cutscenes
Fix: ENUM EVERYTHING
UI: Make monsterIcons have correct pixel sizing (rn its jank)
UI: Redo sprites for creatures that are 192 x 192
UI: Redo fireball, bash, and slash sprites
UI: Make custom colouring for same class partyMembers
Balance: Reevaluate all interaction thresholds
Bug: Tooltip dies
Fix: Drag to item should also work (down press and up press)
Mobile: Make people pay for save scumming
Fix: Let checking of skills in game
Add normal/hard mode

FUTURE/MAYBE
------------
UI: Red colour wax if player can't afford
Bug: Options menu tooltips need to be repositioned
QOL: Have skills panel swap to active party member with skill points unspecced

Feature: Make click on bag (AND BAG ONLY) do something
Feature: Make it so dragging an item to an eventDisplay will place the item in an available slot if possible (will help mobile)