@@ -150,6 +150,7 @@ JUST FINISHED
 Fix: Nerf freeze (make it less complicated)
 Buff: Fiery veil buffed
 Balance: Gave wraith dolleyes and ice golem ice scream
+Buff: Make timekeeper's heal a full heal and revive
 
 COOKING
 -------
@@ -162,7 +163,7 @@ Fix: Make dialogue prompt rotate
 Fix: Make it so stuff can be hovered over during rewards panel
 Fix: Add tutorial tip for not being able to assign skill point in combat
 Fix: Deal with items having 2 always rounded down to 1
-Buff: Make timekeeper's heal a full heal and revive
+
 
 NEAR FUTURE
 ----------------
